# Itasha.Corp_C0PL4ND

./: .gitignore  .gitleaks.toml  AGENT-RESULT.md  AUDIT_FINDINGS.md  AUDIT_PLAN.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONFIG.md  CONTRIBUTING.md  Cargo.toml  GAP_LIST.md  LICENSE-APACHE  PRIVACY.md  README.md  RESEARCH_TERMINAL_SPEC.md  RESEARCH_WINDOW_UX.md  SECURITY.md  SECURITY_AUDIT.md  TRANS-SIMPLIFY-RESULT.md  TRANSPARENCY-RESULT.md  TROUBLESHOOTING.md  WAVE3_HANDOFF.md  audit.toml  deny.toml  mutants.toml  rust-toolchain.toml
.cargo/: audit.toml  mutants.toml
.config/: nextest.toml
.github/: BANNER.md  dependabot.yml  pull_request_template.md  scorecard-notes.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  coverage.yml  dependency-review.yml  fuzz.yml  miri.yml  mutants.yml  no-network-gate.yml  pgo.yml  post-release-verify.yml  release.yml  scorecard.yml  supply-chain.yml
assets/themes/: a11y-high-contrast.toml  akira-redshift.toml  atompunk-sodium.toml  capsule-mono.toml  cockpit-amber.toml  colony-drift.toml  datamosh-haze.toml  dialup-glow.toml  geocities-bbs.toml  ghost-paper.toml  itasha-corp.toml  itasha-neon-aurora.toml  itasha-neon-dawn.toml  itasha-neon-night.toml  itasha-neon-pastel.toml  itasha-neon-soft.toml  itasha-neon.toml  itasha-void-high-contrast.toml  itasha-void.toml  jet-age.toml  kanjo-loop.toml  kusanagi-dive.toml  lain-mauve.toml  lain-wired.toml  mecha-armour.toml  nerv-magi.toml  packet-trace.toml  phosphor-amber.toml  present-day.toml  shutoko-night.toml  terminal-lock.toml  thermoptic.toml  wired-colorblind.toml  wired-noir.toml  yaksha-ink.toml
crates/app/: Cargo.toml  build.rs
crates/app/src/: diagnostics.rs  dll_hardening.rs  drag.rs  egui_main.rs  image_render.rs  issue_intake.rs  lib.rs  main.rs  main_tests.rs  pane_render.rs  panic_hook.rs  reporting.rs  screenshot.rs  update.rs  user_error.rs  win_snap.rs  window.rs  window_tests.rs
crates/app/src/egui_app/: app_config.rs  app_report_ui.rs  app_search.rs  bidi.rs  caption_close.rs  caption_strip.rs  chrome.rs  chrome_toolbar.rs  config_load.rs  crt.rs  font_setup.rs  fonts.rs  glyph_cache.rs  gpu_diag.rs  grid.rs  grid_interaction.rs  hyperlink.rs  job_object.rs  layout_state.rs  mod.rs  mod_tests.rs  motion_fx.rs  pane_term.rs  search_ui.rs  settings.rs  shells.rs  startup_recovery.rs  term_render.rs  theme.rs  win_foreground.rs  window_effects.rs
crates/app/src/update/: mod.rs
crates/app/src/update_engine/: apply.rs  manifest.rs  mod.rs  net.rs  rollback_guard.rs  update_state.rs  updater.rs  verify.rs
crates/app/tests/: a11y.rs  egui_chrome.rs  egui_palette.rs  egui_search.rs  egui_settings.rs  egui_settings_deep.rs  egui_term_render.rs  egui_terminal.rs  egui_window_mgmt.rs  logging_no_pii.rs  qa_wide_glyph_snapshot.rs
crates/core/: Cargo.toml
crates/core/benches/: reflow.rs  search.rs  snapshot.rs  throughput.rs
crates/core/src/: atomic_write.rs  command_history.rs  fetch.rs  fs_perms.rs  fuzzy.rs  grid.rs  image.rs  layout_persist.rs  lib.rs  net_confine.rs  reduced_motion.rs  search.rs  session.rs  term.rs  win_process.rs
crates/core/src/config/: mod.rs
crates/core/src/layout/: action.rs  geometry.rs  mod.rs  nav.rs  ops.rs  tree.rs
crates/core/src/plugin/: mod.rs
crates/core/src/pty/: mod.rs
crates/core/src/term/: charset.rs  keys.rs  osc.rs  palette.rs  tests.rs
crates/core/src/theme/: itermcolors.rs  mod.rs
crates/core/tests/: drop_zones.rs  e2e_terminal.rs  fuzz_robustness.rs  grid_snapshot.rs  integration.rs  layout_actions.rs  layout_persist.rs  perf_smoke.rs  property_tests.proptest-regressions  property_tests.rs  proptest_config.rs  proptest_reflow.rs  proptest_vt.rs  vt_conformance.rs
crates/renderer/: Cargo.toml
crates/renderer/src/: lib.rs
docs/: KEYBINDINGS.md  LAYOUT.md  RELEASE-CHECKLIST.md  TESTING.md  branch-protection-runbook.md  brand.md  control-test-ledger.md  coverage-reporting.md  discoverability.md  plugins.md
fuzz/: .gitignore  Cargo.toml  README.md
fuzz/fuzz_targets/: config_toml.rs  fuzz_archive.rs  fuzz_kitty.rs  fuzz_sixel.rs  itermcolors.rs  osc.rs  state_json.rs  vt_parser.rs
man/: c0pl4nd.1
packaging/: README.md  gen-icons.sh  signing.md
packaging/linux/: build-appimage.sh  build-deb.sh  c0pl4nd.desktop  install.sh
packaging/linux/debian/: control
packaging/macos/: Info.plist  build-dmg.sh  c0pl4nd.rb
packaging/windows/: License.rtf  c0pl4nd.wxs
packaging/windows/winget/: Itasha.C0PL4ND.yaml
packaging/windows/wix/: main.wxs
scripts/: coverage-reporting.sh
supply-chain/: audits.toml  config.toml
tests/: content_safety_audit.py
