# C0PL4ND — a cross-platform, GPU-accelerated terminal emulator.
# "The operator's shell into the wired."
[workspace]
resolver = "2"
members = ["crates/core", "crates/renderer", "crates/app"]
# The cargo-fuzz crate is its own workspace and requires a nightly,
# sanitizer-instrumented toolchain — keep it out of the default `cargo build`
# / `cargo test --workspace` graph so the stable CI matrix is unaffected.
exclude = ["fuzz"]

[workspace.package]
version = "0.3.0"
edition = "2021"
rust-version = "1.80"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/46b-ETYKiAL/Itasha.Corp_C0PL4ND"
repository = "https://github.com/46b-ETYKiAL/Itasha.Corp_C0PL4ND"
authors = ["Itasha.Corp"]
description = "A fast, GPU-accelerated, local-first terminal emulator for Windows, Linux, and macOS."

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
toml = "1.1"

# --- GPU/windowing anchor (promoted to workspace so the egui bundle and the
#     existing terminal-grid renderer share ONE pinned wgpu/winit/glyphon). ---
# These resolve to wgpu 29.0.3 / winit 0.30.13 / glyphon 0.11.0 — the same set
# the reference egui app (SCR1B3) locks, so eframe and glyphon can share one
# wgpu::Device with no duplicate-wgpu-in-the-tree problem (recon dossier §0/§1).
wgpu = "29"
winit = "0.30"
glyphon = "0.11"

# --- egui bundle (Milestone 1: chrome only) — versions proven mutually
#     compatible with wgpu 29 by SCR1B3's Cargo.lock (recon dossier §1.1). ---
eframe = { version = "0.34", default-features = false, features = [
    "wgpu",          # wgpu backend — shares Device/Queue with glyphon (Milestone 2)
    "default_fonts",
    "accesskit",     # a11y tree (also what egui_kittest queries in tests)
    "wayland",
    "x11",
    "persistence",   # native window pos+size restore (#24/#25) + App::save() firing on exit/interval — ron state stored under the with_app_id folder
] }
egui = "0.34"
egui-wgpu = "0.34"
egui_tiles = "0.15"
egui-phosphor = { version = "0.12", default-features = false, features = ["thin", "fill"] }
window-vibrancy = "=0.7.1" # OS glass/acrylic/mica/vibrancy (MIT/Apache-2.0); exact-pinned per dependency-management.md

[profile.release]
opt-level = 3
# Fat LTO over thin: a terminal's hot path (VT parse + grid) benefits from
# cross-crate inlining between `core` and `app`; the extra release build time is
# acceptable for a shipped binary (CI build matrix already tolerates it).
lto = "fat"
codegen-units = 1
strip = true
# Abort on panic in release builds. (1) Smaller binary — no unwind tables /
# landing pads. (2) The terminal has 21 `unsafe` Win32/winit FFI blocks;
# unwinding a panic across the C ABI is UB, so a deterministic abort is the safe
# failure mode. (3) A panic in the PTY reader thread on hostile input should kill
# the process cleanly, not leave a wedged zombie pane. Tests run in the dev/test
# profile (unwind preserved), so `#[should_panic]` is unaffected. The cargo-fuzz
# crate is a separate excluded workspace and sets its own panic strategy.
panic = "abort"
