# cargo-fuzz crate for C0PL4ND.
#
# This is its OWN workspace (the `[workspace]` table below detaches it from the
# parent so the unstable `-Z` / sanitizer-instrumented build never pollutes the
# main `cargo build`). The parent manifest `exclude`s `fuzz/` for the same
# reason — this is the layout the Rust Fuzz Book prescribes.
#
# Run a target locally (requires a nightly toolchain + cargo-fuzz):
#   cargo install cargo-fuzz
#   cargo +nightly fuzz run vt_parser
#   cargo +nightly fuzz run state_json
#
# The highest-value untrusted-input surfaces this crate fuzzes (both reachable
# through `c0pl4nd_core`'s public API — see fuzz/README.md for the surfaces that
# are NOT reachable and why):
#   * vt_parser  — the VT / ANSI / OSC escape-sequence parser. It consumes
#                  arbitrary bytes produced by any program running inside the
#                  terminal, so the input is fully untrusted. Drives
#                  `c0pl4nd_core::Terminal::advance`.
#   * state_json — the persisted window/pane/workspace layout JSON loader, which
#                  is untrusted-at-rest (hand-edited / crash-truncated / tampered
#                  config files). Drives
#                  `c0pl4nd_core::layout_persist::{WorkspaceSnapshot,
#                  LayoutSnapshot}::from_json` + the reconstruction paths.
#   * fuzz_sixel — the hand-written Sixel byte state-machine. Inline-image data
#                  arrives over the PTY as a DCS payload from any program, so it
#                  is fully untrusted. Drives `c0pl4nd_core::image::decode_sixel`.
#   * fuzz_kitty — the Kitty graphics control-string parser + per-format pixel
#                  decoder (f=24 RGB / f=32 RGBA / f=100 PNG). Same untrusted-PTY
#                  surface. Drives `c0pl4nd_core::image::{parse_kitty, decode_kitty}`.
#   * fuzz_archive — the update-engine archive extractor SHAPE (zip / tar.gz over
#                  arbitrary bytes). The real `extract_binary_{zip,targz}` live in
#                  the app BINARY crate (no lib target ⇒ not importable), so this
#                  target drives a self-contained shim that faithfully mirrors the
#                  bounded-extraction logic (entry-count cap, copy-capped inflate,
#                  enclosed_name traversal-skip) over the SAME exact-pinned
#                  zip/tar/flate2 crates. See the target's module doc-comment.

[package]
name = "c0pl4nd-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

# `arbitrary` is a deliberate forward-provision for structured fuzz targets (see
# its comment under [dependencies]); it has no consumer yet, so tell cargo-machete
# not to flag it as an unused dependency.
[package.metadata.cargo-machete]
ignored = ["arbitrary"]

# Fuzz tooling is exact-pinned per dependency-management.md (security-sensitive
# tooling): a fuzz harness gates the two untrusted-input surfaces, so a silent
# minor bump that changed harness semantics is itself a supply-chain risk.
[dependencies]
libfuzzer-sys = "=0.4.10"
# `arbitrary` gives structured fuzzing (typed inputs derived from the raw byte
# stream). The current targets drive byte-oriented entry points directly, but
# `arbitrary` is declared so structured targets can be added without a manifest
# churn and so `cargo fuzz`'s structured-input idioms are available.
arbitrary = { version = "=1.4.2", features = ["derive"] }

# Archive crates for the `fuzz_archive` target's extraction shim. Pinned to the
# EXACT versions the app crate uses (crates/app/Cargo.toml) so the fuzzed shape
# matches the production decompression-path SHAPE byte-for-byte — a fuzz harness
# that drifts from the real crate version is fuzzing the wrong code.
flate2 = "=1.1.9"
tar = { version = "=0.4.46", default-features = false }
zip = { version = "=2.4.2", default-features = false, features = ["deflate"] }

[dependencies.c0pl4nd-core]
path = "../crates/core"

# Keep this crate out of the parent workspace's dependency graph.
[workspace]

[[bin]]
name = "vt_parser"
path = "fuzz_targets/vt_parser.rs"
test = false
doc = false
bench = false

[[bin]]
name = "state_json"
path = "fuzz_targets/state_json.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_sixel"
path = "fuzz_targets/fuzz_sixel.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_kitty"
path = "fuzz_targets/fuzz_kitty.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_archive"
path = "fuzz_targets/fuzz_archive.rs"
test = false
doc = false
bench = false

[[bin]]
name = "config_toml"
path = "fuzz_targets/config_toml.rs"
test = false
doc = false
bench = false

[[bin]]
name = "itermcolors"
path = "fuzz_targets/itermcolors.rs"
test = false
doc = false
bench = false

[[bin]]
name = "osc"
path = "fuzz_targets/osc.rs"
test = false
doc = false
bench = false

# Fuzz builds are release-with-debug; opt for crash-finding speed.
[profile.release]
debug = 1
