[package]
name = "c0pl4nd"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "C0PL4ND — a fast, local-first, GPU-accelerated terminal emulator."
# The modern eframe/egui app is the canonical `c0pl4nd` binary (what `cargo run`,
# `release.yml`, and the installer ship). The original winit/wgpu/glyphon
# terminal is preserved, buildable as `c0pl4nd-legacy`.
default-run = "c0pl4nd"

# The modern eframe/egui chrome shell — the canonical C0PL4ND app. It draws each
# pane's terminal grid with egui's native coloured-text painter.
# See `.s4f3-data/recon-c0pl4nd-egui-modernization.md`.
[[bin]]
name = "c0pl4nd"
path = "src/egui_main.rs"

# The original winit/wgpu/glyphon terminal, preserved (not deleted) and
# buildable on demand for comparison / fallback.
[[bin]]
name = "c0pl4nd-legacy"
path = "src/main.rs"

[dependencies]
c0pl4nd-core = { path = "../core" }
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
winit.workspace = true
wgpu.workspace = true
glyphon.workspace = true # used by the legacy winit-driven `c0pl4nd` binary's renderer
pollster = "0.4"
# HTTP client for the in-app updater. `tls` is ureq 2.x's DEFAULT TLS feature
# and is rustls-backed (the lock graph resolves rustls, never native-tls);
# declared explicitly with `default-features = false` + `["tls", "gzip"]` so the
# rustls backend is pinned-by-manifest (audit #6) and a future default-feature
# change cannot silently swap in native-tls. Exact-pinned per dependency-management.md.
ureq = { version = "=2.12.1", default-features = false, features = ["tls", "gzip"] }
image = { version = "0.25", default-features = false, features = ["png"] }
# BiDi/RTL: Unicode Bidirectional Algorithm for per-row visual reordering of
# terminal text (right-to-left scripts). Already in the lock graph transitively.
unicode-bidi = "0.3"
# Installed-font enumeration + raw face bytes for the Font settings dropdowns
# (Family + Fallback). Lists the system's MONOSPACE families and loads the
# chosen face into egui's `FontFamily::Monospace`. Already in the lock graph
# (cosmic-text pulls it via egui's text stack), so no new transitive cost.
# Exact-pinned per dependency-management.md (production). MIT/Apache-2.0.
fontdb = "=0.23.0"

# --- In-app verified self-updater (Settings → Updates) ---
# Telemetry-free download + SHA-256/minisign verify-before-swap + atomic
# self-replace, mirroring the SCR1B3 editor. Exact-pinned per
# dependency-management.md (production, security-sensitive). All pure-Rust,
# maintained; pass cargo-deny / cargo-audit.
serde_json = "=1.0.150"                                   # parse the GitHub Releases API response (serde is already a dep above)
semver = "=1.0.28"                                        # release version compare (tolerant leading `v`)
sha2 = "=0.10.8"                                          # artifact checksum (catches corruption)
minisign-verify = "=0.2.5"                                # ed25519 signature verify (catches tampering); zero-dep
self-replace = "=1.5.0"                                   # atomic running-exe swap (Windows rename-aside)
flate2 = "=1.1.9"                                         # gunzip the Unix `.tar.gz` release archive
tar = { version = "=0.4.46", default-features = false }   # untar the binary from the Unix archive
zip = { version = "=2.4.2", default-features = false, features = ["deflate"] }  # unzip the Windows `.zip` archive
tempfile = "=3.27.0"                                      # per-run unique 0700 staging dir for the verified download (defense-in-depth TOCTOU fix; already in the lock graph)

# --- egui chrome bundle (Milestone 1) ---
eframe.workspace = true
egui.workspace = true
egui_tiles.workspace = true
egui-phosphor.workspace = true
window-vibrancy.workspace = true

[dev-dependencies]
# Headless egui UI tests (kittest = AccessKit-driven). State-assertion tests run
# everywhere; pixel snapshots are deliberately kept out of CI for now (recon §7).
egui_kittest = { version = "0.34", features = ["wgpu", "snapshot", "eframe"] }

# Updater test fixtures: `minisign` SIGNS test artifacts (the production path
# only VERIFIES via the zero-dep `minisign-verify`). `tempfile` is now a normal
# (production) dependency above — the updater uses it for the per-run staging
# dir — so it is available to the round-trip tests without a dev-dep entry.
minisign = "0.9"

# Embeds the sigil icon + version resource into the exe (build.rs). Windows-only
# build dependency; uses the MSVC resource compiler. Pinned exact per dep policy.
[target.'cfg(windows)'.build-dependencies]
winresource = "=0.1.31"

# D4 (Windows-only): Win32 custom-frame Aero Snap on the frameless window.
# Used solely by the `#[cfg(windows)]` `win_snap` module; not linked elsewhere.
[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dwm",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }
