[package]
name = "c0pl4nd-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "C0PL4ND core engine: PTY, VT parsing, grid model, config, and theming."

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json = "1"
toml.workspace = true
vte = "0.15"
portable-pty = "0.8"
regex = "1"
# East-Asian / wide-character width lookup (wcwidth). Pure data table, no
# transitive deps — used by every serious terminal to advance the cursor by
# 1 or 2 columns per printed grapheme.
unicode-width = "0.2"
sysinfo = "0.39"
# PNG decoding for the Kitty graphics protocol (f=100). Default features are
# disabled and only the `png` codec is enabled to keep the dependency surface
# minimal — Kitty f=24/f=32 are decoded in-house and need no codec.
image = { version = "0.25", default-features = false, features = ["png"] }

[dev-dependencies]
toml.workspace = true
criterion = { version = "0.8", default-features = false }

[[bench]]
name = "throughput"
harness = false
