[package]
name = "c0pl4nd-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "C0PL4ND core engine: PTY, VT parsing, grid model, config, and theming."

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json = "=1.0.150"
toml.workspace = true
# W1TN3SS reporting SDK (pinned git tag) — the config layer embeds the SDK's
# default-OFF two-stream `ReportingConfig` so the consent posture serializes
# with the rest of `config.toml`. Pure consumer; no SDK code authored here.
itasha-report-core.workspace = true
vte = "=0.15.0"
# SIMD-accelerated byte search (BurntSushi) for the VT parser fast path: skip
# runs of plain printable bytes to the next ESC/control byte instead of scanning
# scalar. Already in the lock graph transitively (via `regex`); exact-pinned per
# dependency-management.md. Pure-Rust, no transitive deps.
memchr = "=2.8.2"
# PINNED to 0.8.x deliberately. 0.9.0 drops the unmaintained `serial` dep
# (RUSTSEC-2017-0008) for `serial2`, but is KNOWN-BROKEN on Windows —
# ConPTY `pty.read` returns garbage / the shell round-trip hangs
# (wezterm/wezterm#6783, OPEN as of 2026-05). The serial advisory is tracked
# as an accepted risk in .cargo/audit.toml; bump to >=0.9.x only once #6783 is
# fixed and the Windows PTY round-trip verifies green.
portable-pty = "=0.8.1"
regex = "=1.12.4"
# East-Asian / wide-character width lookup (wcwidth). Pure data table, no
# transitive deps — used by every serious terminal to advance the cursor by
# 1 or 2 columns per printed grapheme.
unicode-width = "=0.2.2"
sysinfo = "=0.39.3"
# PNG decoding for the Kitty graphics protocol (f=100). Default features are
# disabled and only the `png` codec is enabled to keep the dependency surface
# minimal — Kitty f=24/f=32 are decoded in-house and need no codec.
image = { version = "=0.25.10", default-features = false, features = ["png"] }
# Memory hygiene (P-V3): wipe transient sensitive buffers (OSC 52 clipboard
# write payloads, paste-staging text) on drop/reset so plaintext does not linger
# in freed allocations recoverable from a crash dump / pagefile. Already in the
# lock graph transitively; exact-pinned per dependency-management.md.
zeroize = "=1.9.0"

[dev-dependencies]
toml.workspace = true
criterion = { version = "0.8", default-features = false }
# Property-based testing with automatic shrinking + a committed regression
# corpus (`proptest-regressions/`). Replaces/augments the hand-rolled SplitMix64
# harness in `tests/property_tests.rs`: failures shrink to a minimal input and
# the failing seed is persisted so a fixed bug stays fixed. Dev-only — never in
# the production graph. Pinned to the current stable 1.x line.
proptest = "1"

[[bench]]
name = "throughput"
harness = false

[[bench]]
name = "snapshot"
harness = false

[[bench]]
name = "reflow"
harness = false

[[bench]]
name = "search"
harness = false
